--- a/ZBD/Pages/Bohaterowie Folder/BohaterowieLista.razor
+++ b/ZBD/Pages/Bohaterowie Folder/BohaterowieLista.razor
@@ -5,7 +5,14 @@
 @inject NavigationManager navManager
 
 <PageTitle>Bohaterowie</PageTitle> 
-<h3>Lista bohaterów <button class="btn btn-primary" @onclick="(() => AddChampion())">Dodaj bohatera</button></h3>
+<h3>
+	Lista bohaterów 
+	<AuthorizeView Roles="Administrator">
+		<Authorized>
+			<button class="btn btn-primary" @onclick="(() => AddChampion())">Dodaj bohatera</button>
+		</Authorized>
+	</AuthorizeView>
+</h3>
 
 @if (champions == null)
 {
