--- a/ZBD/Pages/Index.razor
+++ b/ZBD/Pages/Index.razor
@@ -1,9 +1,15 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>ZBD</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Witaj!</h1>
 
-Welcome to your new app.
+Oto strona startowa aplikacji do zarządzania danymi z gry "League of Legends" stworzonej na potrzeby projektu ZBD.
+<br />
+<br />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+Autorzy:
+<ul>
+	<li>Adam Kopiec 148198</li>
+	<li>Mikołaj Krakowiak 148076</li>
+</ul>
