--- a/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
+++ b/ZBD/Pages/Przedmioty Folder/PrzedmiotyLista.razor
@@ -5,7 +5,14 @@
 @inject NavigationManager navManager
 
 <PageTitle>Przedmioty</PageTitle>
-<h3>Lista przedmiotów <button class="btn btn-primary" @onclick="(() => ShowEditItem())">Dodaj przedmiot</button></h3>
+<h3>
+	Lista przedmiotów 
+	<AuthorizeView Roles="Administrator">
+		<Authorized>
+			<button class="btn btn-primary" @onclick="(() => ShowEditItem())">Dodaj przedmiot</button>
+		</Authorized>
+	</AuthorizeView>
+</h3>
 
 <table class="table">
 	<thead>
