--- a/ZBD/Shared/MainLayout.razor
+++ b/ZBD/Shared/MainLayout.razor
@@ -12,7 +12,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            @*<a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>*@
             <AuthorizeView>
                 <Authorized>
                     <a>@context.User.Identity.Name</a>
